--- a/RealtimeRendering/RealtimeRendering.csproj
+++ b/RealtimeRendering/RealtimeRendering.csproj
@@ -56,7 +56,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Triangle.cs" />
+    <Compile Include="Models\Matrix2x2.cs" />
+    <Compile Include="Models\Triangle2D.cs" />
+    <Compile Include="Models\Triangle.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -95,6 +97,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Helpers\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
