--- a/RealtimeRendering/RealtimeRendering.csproj
+++ b/RealtimeRendering/RealtimeRendering.csproj
@@ -56,6 +56,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Helpers\MathHelper.cs" />
     <Compile Include="Models\Matrix2x2.cs" />
     <Compile Include="Models\Triangle2D.cs" />
     <Compile Include="Models\Triangle.cs" />
@@ -98,8 +99,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Helpers\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
